# marslite_simulation_ws

./: .gitignore  README.md  docker_run.sh  requirements.txt
src/Libraries/apriltags_ros/apriltags/: CMakeLists.txt
src/Libraries/apriltags_ros/apriltags_ros/: CMakeLists.txt
src/Libraries/file_server/: CMakeLists.txt
src/Messages/detection_msgs/: CMakeLists.txt
src/Messages/tm_msgs/: CMakeLists.txt  package.xml
src/mars_lite_description/: CMakeLists.txt
src/mars_lite_description/launch/: gazebo_empty.launch  gazebo_supermarket.launch  spawn_mars.launch
src/mars_lite_description/models/shelf/: model.sdf
src/mars_lite_description/models/small_room/: model.sdf
src/mars_lite_description/worlds/: supermarket.world
src/mars_lite_moveit_config/: CMakeLists.txt
src/mars_lite_moveit_config/config/: gazebo_ros_control_params.yaml  joint_limits.yaml  mars_arm_controller_tm.yaml
src/mars_lite_moveit_config/launch/: moveit.rviz
src/marslite_control/: CMakeLists.txt  README.md  package.xml
src/marslite_control/include/marslite_control/: marslite_control.h
src/marslite_control/include/marslite_mpc/: Constants.h  Constraints.h  Poses.h  marslite_mpc.h
src/marslite_control/include/model_predictive_control/: Constant.h  Constraint.h  Pose.h  model_predictive_control.h
src/marslite_control/include/tm_kinematics/: README.md  tm_kinematics.h
src/marslite_control/launch/: test_default_pose_planning.launch  test_gripper_moving.launch  test_joystick_teleoperation.launch  test_kinematics.launch  test_pose_planning.launch
src/marslite_control/src/: marslite_control.cpp  marslite_mpc.cpp  model_predictive_control.cpp  tm_kinematics.cpp
src/marslite_control/test/: kinematic_test_case.txt  test_cartesian_control.cpp  test_default_pose_planning.cpp  test_gripper_moving.cpp  test_joystick_teleoperation.cpp  test_kinematics.cpp  test_pose_planning.cpp
src/marslite_mpc/: CMakeLists.txt  package.xml
src/marslite_mpc/include/marslite_mpc/: Constants.h  Constraints.h  Poses.h  marslite_mpc.h
src/marslite_mpc/launch/: test_default_pose_planning.launch
src/marslite_mpc/src/: main.cpp  marslite_mpc.cpp  tm_kin.cpp
src/marslite_mpc/test/: test_default_pose_planning.cpp
src/marslite_navigation/: CMakeLists.txt  package.xml
src/marslite_navigation/cfg/: AdaptiveController.cfg  SharedControl.cfg  VirtualZone.cfg
src/marslite_navigation/config/: apf_params.yaml  teleop_params.yaml  turtlebot3_lds_2d_gazebo.lua
src/marslite_navigation/include/marslite_navigation/: move_base.h  teleop_interface.h  teleop_joystick.h  teleop_keyboard.h
src/marslite_navigation/include/marslite_navigation/shared_control/: adaptive_controller.h  deformable_virtual_zone.h  shared_control.h  static_virtual_zone.h  virtual_zone.h
src/marslite_navigation/include/marslite_navigation/teleoperation/: teleop_interface.h  teleop_joystick.h  teleop_keyboard.h
src/marslite_navigation/launch/: amcl.launch  apf_joystick.launch  apf_keyboard.launch  navigation_main.launch  shared_control_joystick.launch  shared_control_keyboard.launch  slam_gmapping.launch  teleop_joystick.launch  teleop_keyboard.launch
src/marslite_navigation/src/: artificial_potential_field.cpp  shared_control_main.cpp  teleop_interface.cpp  teleop_joystick.cpp  teleop_joystick_main.cpp  teleop_keyboard.cpp  teleop_keyboard_main.cpp
src/marslite_navigation/src/shared_control/: adaptive_controller.cpp  deformable_virtual_zone.cpp  shared_control.cpp  static_virtual_zone.cpp  virtual_zone.cpp
src/marslite_navigation/src/teleoperation/: teleop_interface.cpp  teleop_joystick.cpp  teleop_keyboard.cpp  teleop_keyboard_main.cpp
src/marslite_properties/include/marslite_properties/: Arithmetic.h  Arithmetics.h  Exception.h  Exceptions.h  Properties.h  Time.h
src/marslite_shared_control/: CMakeLists.txt  package.xml
src/marslite_shared_control/cfg/: AdaptiveController.cfg  VirtualZone.cfg
src/marslite_shared_control/include/marslite_shared_control/: adaptive_controller.h  deformable_virtual_zone.h  properties.h  static_virtual_zone.h  virtual_zone.h
src/marslite_shared_control/src/: adaptive_controller.cpp  deformable_virtual_zone.cpp  static_virtual_zone.cpp  virtual_zone.cpp
src/mpc/: CMakeLists.txt  package.xml
src/mpc/include/mpc/: mpc.h
src/mpc/src/: imu_downsampling.cpp  mpc.cpp  mpc_node.cpp  tm_kin.cpp
src/product_detection/: CMakeLists.txt  README.md  package.xml
src/product_detection/config/: yolo_classes.yaml
src/product_detection/examples/: object_detection_viewer.py
src/product_detection/launch/: object_detection_viewer_example.launch  opencv_pointcloud_viewer_example.launch  rtabmap_pointcloud.launch
src/product_detection/msg/: BoundingBox.msg  DetectedObject.msg
src/product_detection/scripts/: object_detection_3d.py  object_detection_viewer.py  yolo_detection_publisher.py  yolo_detection_publisher_new.py
src/robotiq/robotiq_description/: CMakeLists.txt
src/robotiq/robotiq_gazebo/: CMakeLists.txt
src/tm_drvier_t/: CMakeLists.txt
src/tm_drvier_t/src/: tm_kin.cpp
src/tmr_ros1_simplified_edition/tm5_700_moveit_config/: CMakeLists.txt
src/tmr_ros1_simplified_edition/tm5_description/: CMakeLists.txt
