<?xml version="1.0"?>
<package format="2">
  <name>marslite_control</name>
  <version>0.0.0</version>
  <description>The robotic control scheme for marslite robots</description>
  <maintainer email="ych0610765@gmail.com">HandianYang</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>control_msgs</build_depend>
  <exec_depend>control_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <build_depend>trajectory_msgs</build_depend>
  <exec_depend>trajectory_msgs</exec_depend>

</package>
