<?xml version="1.0"?>
<package format="2">
  <name>marslite_mpc</name>
  <version>0.0.0</version>
  <description>The MPC package for marslite robot</description>
  <maintainer email="ych0610765@gmail.com">HandianYang</maintainer>
  <license>GPL</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <!-- <build_depend>apriltags_ros</build_depend>
  <build_export_depend>apriltags_ros</build_export_depend> -->

  <build_depend>control_msgs</build_depend>
  <exec_depend>control_msgs</exec_depend>

  <!-- <build_depend>detection_msgs</build_depend>
  <exec_depend>detection_msgs</exec_depend> -->

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <!-- <build_depend>message_filters</build_depend>
  <build_export_depend>message_filters</build_export_depend> -->

  <!-- <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend> -->

  <!-- <build_depend>pcl_conversions</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend> -->

  <!-- <build_depend>pcl_ros</build_depend>
  <build_export_depend>pcl_ros</build_export_depend> -->

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend> -->

  <!-- <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend> -->

  <build_depend>trajectory_msgs</build_depend>
  <exec_depend>trajectory_msgs</exec_depend>

</package>
